--- a/index.html
+++ b/index.html
@@ -4,41 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Shoon</title>
-    <!-- Bootstrap 5 CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Full-Screen Intro Section -->
-    <section class="intro-section d-flex align-items-center justify-content-center text-center">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <h1 class="display-1">Hi, I'm Shoon</h1>
-            <p class="lead">I'm a UI/UX Designer</p>
-            <a href="#about" class="btn btn-outline-light mt-4">Learn More</a>
+            <a class="navbar-brand" href="#">Shoon</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </section>
+    </nav>
 
-    <!-- About Me Section -->
-    <section id="about" class="py-5 bg-light">
-        <div class="container text-center">
-            <h2 class="section-title">About Me</h2>
-            <p>I'm not just a designer, I'm a design problem solver. I translate ideas into impactful experiences that engage users and drive results.</p>
-            <p>Throughout my academic journey, I have engaged in both individual and team-based projects, allowing me to cultivate a robust set of design and collaboration skills.</p>
-            <!-- Placeholder for an About Me image -->
-            <img src="path/to/your-image.jpg" alt="About Me Image" class="img-fluid mt-4 placeholder-image">
+    <!-- Full-Screen Intro Section with About Me Content -->
+    <header class="header text-center">
+        <div class="container">
+            <h1 class="display-4">Hi, I'm Shoon</h1>
+            <p class="lead">and I'm a UI/UX Designer.</p>
+            <p class="quote">I'm not just a designer, I'm a design problem solver.</p>
+            <p class="about-text">Throughout my academic journey, I have engaged in both individual and team-based projects, allowing me to cultivate a robust set of design and collaboration skills.</p>
+            <a href="#projects" class="btn btn-get-started mt-4">View My Projects</a>
         </div>
-    </section>
+    </header>
 
     <!-- Projects Section -->
     <section id="projects" class="py-5">
         <div class="container">
             <h2 class="section-title text-center">School Projects</h2>
-            <div class="row">
+            <div class="row project-card-container">
                 <!-- Project 1 -->
                 <div class="col-md-6">
                     <div class="card project-card mb-4">
                         <!-- Placeholder for project image -->
-                        <img src="path/to/project-image1.jpg" alt="Project Image 1" class="card-img-top placeholder-image">
+                        <img src="project1.png" alt="Project Image 1" class="card-img-top placeholder-image">
                         <div class="card-body">
                             <h5 class="card-title">Productivity App</h5>
                             <p class="card-text">Designed a productivity app for SP students. The UI/UX design of the application effectively blends consistency, simplicity, and user control.</p>
@@ -49,37 +59,52 @@
                 <div class="col-md-6">
                     <div class="card project-card mb-4">
                         <!-- Placeholder for project image -->
-                        <img src="path/to/project-image2.jpg" alt="Project Image 2" class="card-img-top placeholder-image">
+                        <img src="project2.png" alt="Project Image 2" class="card-img-top placeholder-image">
                         <div class="card-body">
                             <h5 class="card-title">Sustainability Website</h5>
                             <p class="card-text">Designed a visually appealing sustainability website from scratch, including all backend and frontend, and user handling.</p>
                         </div>
                     </div>
                 </div>
+                <!-- More Projects Placeholder -->
+                <div class="col-md-6">
+                    <div class="card project-card mb-4">
+                        <!-- Placeholder for project image -->
+                        <img src="project3.png" alt="Project Image 3" class="card-img-top placeholder-image">
+                        <div class="card-body">
+                            <h5 class="card-title">Car Park Finder</h5>
+                            <p class="card-text">A web application that allows users to filter car parks by prefix and minimum gantry height using real-time data through a .csv file.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card project-card mb-4">
+                        <!-- Placeholder for project image -->
+                        <img src="project4.png" alt="Project Image 4" class="card-img-top placeholder-image">
+                        <div class="card-body">
+                            <h5 class="card-title">Product Design</h5>
+                            <p class="card-text">A sleek phone stand that doubles as a card holder, combining functionality and sustainable materials.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-
+    
     <!-- Contact Section -->
     <section id="contact" class="py-5 bg-light">
         <div class="container text-center">
-            <h2 class="section-title">Let’s Design Together!</h2>
+            <h2 class="section-title">Let's Design Together!</h2>
             <p>Reach out for a collab!</p>
-            <a href="mailto:shoonei16sep@gmail.com" class="btn btn-primary">Email Me</a>
-            <div class="social-links mt-4">
-                <a href="#" class="btn btn-outline-dark">Instagram</a>
-                <a href="#" class="btn btn-outline-dark">Facebook</a>
-                <a href="#" class="btn btn-outline-dark">Twitter</a>
-                <a href="#" class="btn btn-outline-dark">LinkedIn</a>
+            <div class="d-flex justify-content-center mt-3">
+                <a href="mailto:shoonei16sep@gmail.com" class="btn btn-success me-3">Email Me</a>
+                <a href="https://www.linkedin.com/in/shoon-sep/" class="btn btn-success me-3">LinkedIn</a>
             </div>
         </div>
     </section>
 
-    <!-- Bootstrap 5 JS and Popper.js -->
+    <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-    <!-- jQuery for scroll animations -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
